@startuml

title __ABSTRACT_TICKETS's Class Diagram__\n

  namespace ticket {
    class ticket.AutoKinoTicket {
    }
  }
  

  namespace ticket {
    interface ticket.Berechnung {
    }
  }
  

  namespace ticket {
    class ticket.KinoTicket {
    }
  }
  

  namespace ticket {
    class ticket.KonzertTicket {
    }
  }
  

  namespace ticket {
    class ticket.Main {
    }
  }
  

  namespace ticket {
    class ticket.SportTicket {
    }
  }
  

  namespace ticket {
    abstract class ticket.Ticket {
    }
  }
  

  ticket.AutoKinoTicket .up.|> ticket.Berechnung
  ticket.AutoKinoTicket -up-|> ticket.KinoTicket
  ticket.KinoTicket .up.|> ticket.Berechnung
  ticket.KinoTicket -up-|> ticket.Ticket
  ticket.KonzertTicket .up.|> ticket.Berechnung
  ticket.KonzertTicket -up-|> ticket.Ticket
  ticket.SportTicket .up.|> ticket.Berechnung
  ticket.SportTicket -up-|> ticket.Ticket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
